--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
   web:
     build:
       context: .
-    command: bash -c "rm -f tmp/pids/server.pid && bundle install && exec rails s -p 3000 -b '0.0.0.0'"
+    command: bash -c "rm -f tmp/pids/server.pid && exec rails s -p 3000 -b '0.0.0.0'"
     volumes:
       - .:/app
     ports:
