--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,8 @@ services:
       context: .
     command: bash -c "rm -f tmp/pids/server.pid && exec rails s -p 3000 -b '0.0.0.0'"
     volumes:
-      - .:/app
+      - .:/rails
+
     ports:
       - "3000:3000"
     depends_on:
