--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   db: 
-    image: postgres:10.16-alpine
+    image: postgres
     volumes:
       - ./tmp/db:/var/lib/postgresql/data
     environment:
